<?xml version="1.0"?>
<package format="2">
  <name>hikrobot_camera</name>
  <version>0.0.0</version>
  <description>The hikrobot_camera package</description>
  <maintainer email="savoki1024@gmail.com">zyw</maintainer>
  <license>TODO</license>
  <!-- The buildtool_depend -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- The build_depend -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <!-- The build_export_depend -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <!-- The exec_depend -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <!-- The Other tools -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
